tests/tmytests/bad/two_dim_arr_cast.lat
int main() {
    (int[][]) null;
    return 0;
}